--- a/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.html
+++ b/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.html
@@ -1,1 +1,32 @@
-<p>banner-view works!</p>
+<div class="banner-container">
+    <h2>Quản Lý Banner</h2>  
+    <div class="table-container">
+      <table>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Hình ảnh</th>
+            <th>Tên Banner</th>
+            <th>ID</th>
+            <th>Hành động</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let banner of banner; let i = index">
+            <td>{{ i + 1 }}</td>
+            <td>
+              <img [src]="'http://localhost:8000/images/banners/' + banner.image" 
+                   [alt]="banner.bannerName" 
+                   width="100" height="100">
+            </td>
+            <td>{{ banner.bannerName }}</td>
+            <td>{{ banner.bannerId }}</td>
+            <td>
+              <button (click)="deleteBanner(banner.id)">Xóa</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  
