thanh tú updated

--- a/frontend/Ecommer-app/src/app/component/pages/layout/layout.component.html
+++ b/frontend/Ecommer-app/src/app/component/pages/layout/layout.component.html
@@ -53,6 +53,12 @@
                     </a>
                 </li>
                 <li>
+                    <a routerLink="/user-account">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">user</span>
+                    </a>
+                </li>
+                <li>
                     <a routerLink="/contact">
                         <i class="fa fa-envelope-o fa-lg"></i>
                         <span class="nav-text">Contact</span>
