thanh tu updated

--- a/frontend/Ecommer-app/src/app/component/pages/layout/layout.component.html
+++ b/frontend/Ecommer-app/src/app/component/pages/layout/layout.component.html
@@ -47,9 +47,15 @@
                     </a>
                 </li>
                 <li>
-                    <a routerLink="/user">
-                        <i class="fa fa-user fa-lg"></i>
-                        <span class="nav-text">Account</span>
+                    <a routerLink="/category">
+                        <i class="fa fa-tags fa-lg"></i>
+                        <span class="nav-text">Category</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/contact">
+                        <i class="fa fa-envelope-o fa-lg"></i>
+                        <span class="nav-text">Contact</span>
                     </a>
                 </li>
                 <li>
@@ -59,9 +65,9 @@
                     </a>
                 </li>
                 <li>
-                    <a routerLink="/contact">
-                        <i class="fa fa-envelope-o fa-lg"></i>
-                        <span class="nav-text">Contact</span>
+                    <a routerLink="/user">
+                        <i class="fa fa-user fa-lg"></i>
+                        <span class="nav-text">Account</span>
                     </a>
                 </li>
             </ul>
