--- a/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.html
+++ b/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.html
@@ -15,14 +15,14 @@
           <tr *ngFor="let banner of banner; let i = index">
             <td>{{ i + 1 }}</td>
             <td>
-              <img [src]="'http://localhost:8000/images/banners/' + banner.image" 
+              <img [src]="'http://localhost:8080/api/public/banners/image/'+banner.image" 
                    [alt]="banner.bannerName" 
                    width="100" height="100">
             </td>
             <td>{{ banner.bannerName }}</td>
             <td>{{ banner.bannerId }}</td>
             <td>
-              <button (click)="deleteBanner(banner.id)">Xóa</button>
+              <button >Xóa</button>
             </td>
           </tr>
         </tbody>
