--- a/frontend/Ecommer-app/src/app/component/pages/layout/layout.component.css
+++ b/frontend/Ecommer-app/src/app/component/pages/layout/layout.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:300');
+
 body
 {
     margin:0px;
@@ -12,11 +14,8 @@ body
 
 /* @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css); */
 
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
 
-.logo{
-  
-}
+
 
 .settings {
   
@@ -304,3 +303,4 @@ height: 100%;
   font-weight: 300;
   src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
 }
+
