--- a/frontend/Ecommer-app/src/app/component/pages/user/user-list/user-list.component.html
+++ b/frontend/Ecommer-app/src/app/component/pages/user/user-list/user-list.component.html
@@ -22,7 +22,9 @@
                     <td>{{ user.roles?.roleId}}</td>
                     <td >
                         <button class="btn btn-danger btn-sm me-2 ">Xóa</button>
-                        <a [routerLink]="['/user-account/edit', user.userId]" class="btn btn-primary btn-sm">Sửa</a>  
+                       <button  routerLink="['/user-account/edit',user.userId]" style="color: white;" class="btn btn-primary btn-sm"  >
+                          Sửa
+                       </button> 
                     </td>
                 </tr>
             </tbody>
