--- a/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.html
+++ b/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.html
@@ -1,7 +1,10 @@
 <div class="banner-container">
     <h2>Quản Lý Banner</h2>  
     <div class="table-container">
-      <table>
+      <div class="button-container">
+        <button mat-raised-button color="primary" routerLink="/banner-create">Thêm</button>
+      </div>
+            <table>
         <thead>
           <tr>
             <th>#</th>
