--- a/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.css
+++ b/frontend/Ecommer-app/src/app/component/pages/banner-view/banner-view.component.css
@@ -8,6 +8,12 @@
     color: #4a5568;
 }
 
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+  }
+  
 h2 {
     text-align: center;
     font-size: 24px;
